--- a/Gull-Tastrophe.html
+++ b/Gull-Tastrophe.html
@@ -40,10 +40,14 @@
         <div class="media-info-container">
             <!-- Main Media Section (Video) -->
             <div class="project-media">
-                <video autoplay loop controls muted preload="none" class="media-video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Pz8cRp4pWJc?si=2J8Vw12jHAtGoQ64?autoplay=1&mute=1"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <!-- <video autoplay loop controls muted preload="none" class="media-video">
                     <source src="video/" type="video/mp4">
                     Your browser does not support the video tag.
-                </video>
+                </video> -->
                 <!-- Action Buttons: YouTube, Play Now, GitHub -->
                 <!-- <div class="media-buttons">
                     <a href="https://www.youtube.com/watch?v=YourVideoID" target="_blank" class="youtube-button">Watch
