--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
                     </div>
                 </a> -->
             </div>
-            <div class="centered-content">
+            <!-- <div class="centered-content">
                 <a href="AllProjects.html" target= "_blank" class="btn"> All Projects</a>
-            </div>
+            </div> -->
 
         </section>
     </main>
