Fixed mobile layout

--- a/index.html
+++ b/index.html
@@ -147,11 +147,11 @@
                 <div class="project-description">
                     <div class="text">
 
-                        <!-- <b>Dracomaton</b> is a a top-down roguelike bullet hell where you can switch forms and
+                        <b>Dracomaton</b> is a a top-down roguelike bullet hell where you can switch forms and
                          mod weapons to build up their power with extra effects to survive -->
-                    </div>
+                    <!-- </div> -->
 
-                </div>
+                <!-- </div>
                 <a href="Dracomaton.html"><img src="images/dracomaton.png" style="width:100%" class="image"></a>
                 <div class="tags">
                     <p class="tag1"> C# </p>
@@ -177,11 +177,11 @@
 
             <div class="projects-col">
                 <div class="project-description">
-                    <div class="text">
+                    <div class="text"> -->
 
                         <!-- <b>Dracomaton</b> is a a top-down roguelike bullet hell where you can switch forms and
                          mod weapons to build up their power with extra effects to survive -->
-                    </div>
+                    <!-- </div>
 
                 </div>
                 <a href="FisherGame.html"><img src="images/Untitled Fisher Game.png" style="width:100%" class="image"></a>
@@ -252,13 +252,13 @@
 
 <!-- <div class="projects-col">
                 <div class="project-description">
-                    <!-- <div class="text">
+                    <div class="text">
                         <b>Dodgy Dice</b> is a 2D Top down, vampire-survivor-like bullet hell where the character is a
                         multi sided die.
                         Each time a die is rolled, a number is generated and used to fuel various behaviors of the
                         game
                     </div> -->
-                </div>
+                <!-- </div>
                 <a href="DodgyDice.html"><img src="images/dogy_4.png" style="width:100%" class="image"></a>
                 <div class="tags">
                     <p class="tag1"> GDScript </p>
