--- a/Gull-Tastrophe.html
+++ b/Gull-Tastrophe.html
@@ -24,8 +24,8 @@
         crossorigin="anonymous"></script>
 </head>
 
-<body>
-    <header id="header"></header>
+<body class="background-page">
+    <!-- <header id="header"></header> -->
 
 
     <section class="project-card">
@@ -34,16 +34,18 @@
         <div class="project-header">
             <h1 class="project-name">Gull-Tastrophe</h1>
             <p class="project-role">Gameplay Programmer & Game Designer</p>
-            <a class="play-button">Playable Demo will be released in this winter</a>
+            <a href="https://unsame-studio.github.io/seagull.html" target="_blank" class="play-button">Official Website</a>
         </div>
         <!-- Media and Info Container for Flex Layout -->
         <div class="media-info-container">
             <!-- Main Media Section (Video) -->
             <div class="project-media">
-                <video autoplay loop controls class="media-video">
-                    <source src="video/" type="video/mp4">
-                    Your browser does not support the video tag.
-                </video>
+
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/ila6mWyYMIg?si=hNWerYUvbcgK2teO"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
                 <!-- Action Buttons: YouTube, Play Now, GitHub -->
                 <!-- <div class="media-buttons">
                     <a href="https://www.youtube.com/watch?v=YourVideoID" target="_blank" class="youtube-button">Watch
