--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <script src="utils.js" defer></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="about.css">
 
     <link rel="icon" href="image/website-icon.png" type="image/x-icon">
 
@@ -28,15 +28,14 @@
     <div id="header"></div>
 
     <section class="about">
-        <h1>About Me </h1>
-        <p>Hi everyone, I'm Yiyang Lu! I just achieved my bachelor's degree in Computer Science: Game Design this June,
+        <h1>About Me</h1>
+        <p>Hi everyone, I'm <strong>Yiyang Lu</strong>! I just achieved my bachelor's degree in Computer Science: Game Design this June,
             and I am continuing to pursue my Master's degree in Game and Playable Media at UCSC Silicon Valley Extension
             right now. I have worked on several school projects as a game programmer on different game engines and enjoy
             collaborating with people. I look forward to working in a professional game development environment to
-            fulfill my dream of contributing to the video game industry.<br>
+            fulfill my dream of contributing to the video game industry.<br><br>
 
-
-            Fun fact about me: I can bake very delicious cookies :D<br>
+            Fun fact about me: <em>I can bake very delicious cookies :D</em>
         </p>
     </section>
     <div id="footer"></div>
