--- a/footer.html
+++ b/footer.html
@@ -1,12 +1,17 @@
 <section class="footer" id="footer">
     <div class="footer-links" id="footerLinks">
         <div class="footer-icons">
-            <i class="fa fa-github" onclick="location.href = 'https://github.com/lyiyang0702'" style="cursor:pointer"
-                title="GitHub"></i>
-            <i class="fa fa-envelope" onclick="location.href = 'mailto:lyiyang@ucsc.edu'" style="cursor:pointer"
-                title="Email"></i>
-            <i class="fa fa-linkedin" onclick="location.href = 'https://www.linkedin.com/in/lyiyang'" style="cursor:pointer"
-                title="LinkedIn"></i>
+            <i class="fa fa-github" style="cursor:pointer" title="GitHub"
+                onclick="window.open('https://github.com/lyiyang0702', '_blank');"></i>
+
+            <i class="fa fa-envelope" style="cursor:pointer;" title="Email"
+                onclick="window.open('mailto:ludaaa0702@gmail.com', '_blank');"></i>
+
+            <i class="fa fa-linkedin" style="cursor:pointer" title="LinkedIn"
+                onclick="window.open('https://www.linkedin.com/in/lyiyang', '_blank');"></i>
         </div>
+
+        <p class="footer-copyright">&copy; 2025 Yiyang Lu. All Rights Reserved.</p>
     </div>
+
 </section>
