--- a/header.html
+++ b/header.html
@@ -1,15 +1,19 @@
 <section class="header" id="header">
     <nav>
         <!-- Avatar on the Left -->
-        <img src="images/avatar.png" class="avatar" width="80" height="80">
+        <a href="index.html" target="_blank" title="Click to visit">
+            <img src="images/avatar.png" class="avatar" width="100" height="100">
+            <img src="images/name.gif" class="site-name" width="200" height="120">
+        </a>
 
         <!-- Name in the Center -->
-        <!-- <img src="images/name.gif" class="site-name" width="200" height="80"> -->
+
 
         <!-- Navigation Links (hidden on mobile by default) -->
         <div class="nav-links" id="navLinks">
             <i class="fa fa-times-circle close-icon" onclick="hideMenu()"></i>
             <ul>
+               <!-- <li><a href="index.html">RESUME</a></li> -->
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="index.html">WORKS</a></li>
             </ul>
