--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     </div>
                 </a>
                 
-                <a href="FiresafeFriend.html" target="_blank" class="projects-col">
+                <!-- <a href="FiresafeFriend.html" target="_blank" class="projects-col">
                     <img src="images/ATCCover.gif" alt="Alert The City">
                     <div class="tags">
                         <p class="tag1">C#</p>
@@ -77,41 +77,7 @@
                             This project is a 3D two player strategy game. I programmed the whole game.
                         </p>
                     </div>
-                </a>
-
-                <a href="AlertTheCity.html" target="_blank" class="projects-col">
-                    <img src="images/ATCCover.gif" alt="Alert The City">
-                    <div class="tags">
-                        <p class="tag1">C#</p>
-                        <p class="tag2">Unity</p>
-                        <p class="tag3">3D</p>
-                    </div>
-
-                    <div class="project-details">
-                        <h3 class="project-title">Alert The City (2024)</h3>
-                        <p class="project-role">Solo Programmer</p>
-                        <p class="project-description">
-                            This project is a 3D wildfire simulation. I programmed the whole game.
-                        </p>
-                    </div>
-                </a>
-
-                <a href="Dracomaton.html" target="_blank" class="projects-col">
-                    <img src="images/DracomatonCover.gif" alt="Dracomaton">
-                    <div class="tags">
-                        <p class="tag1">C++ & Blueprint</p>
-                        <p class="tag2">Unreal</p>
-                        <p class="tag3">3D</p>
-                    </div>
-
-                    <div class="project-details">
-                        <h3 class="project-title">Gull-Tastrophe (2024)</h3>
-                        <p class="project-role">Gameplay Programmer</p>
-                        <p class="project-description">
-                            This project is a 3D Light Action-Adventure Seagull Game. I developed part of the gameplay and system.
-                        </p>
-                    </div>
-                </a>
+                </a> -->
                 
                 <a href="AlertTheCity.html" target="_blank" class="projects-col">
                     <img src="images/ATCCover.gif" alt="Alert The City">
