--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
                     <div class="project-details">
                         <h3 class="project-title">Gull-Tastrophe (2024)</h3>
-                        <p class="project-role">Solo Programmer</p>
+                        <p class="project-role">Gameplay Programmer</p>
                         <p class="project-description">
                             This project is a 3D Light Action-Adventure Seagull Game. I developed part of the gameplay and system.
                         </p>
