--- a/Dracomaton.html
+++ b/Dracomaton.html
@@ -35,7 +35,7 @@
             <h1 class="project-name">Dracomaton(2023)</h1>
             <p class="project-role">Gameplay Programmer & UI Programmer</p>
             <a href="https://store.steampowered.com/app/2457890/DRACOMATON/" target="_blank" class="play-button">Play
-                Now</a>
+                On Steam</a>
         </div>
         <!-- Media and Info Container for Flex Layout -->
         <div class="media-info-container">
