--- a/FiresafeFriend.html
+++ b/FiresafeFriend.html
@@ -33,7 +33,7 @@
             <h1 class="project-name"> Firesafe Friend (2024)</h1>
             <p class="project-role"> Solo Programmer</p>
             <a href="https://ucsc-wildfire-games.itch.io/firewise-citizens" target="_blank" class="play-button">Play
-                Now</a>
+                On Itch</a>
         </div>
         <!-- Media and Info Container for Flex Layout -->
         <div class="media-info-container">
