--- a/FirewiseCitizen.html
+++ b/FirewiseCitizen.html
@@ -30,10 +30,10 @@
 
         <!-- Project Header Section -->
         <div class="project-header">
-            <h1 class="project-name"> Alert The City (2024)</h1>
+            <h1 class="project-name"> Firewise Citizen (2024)</h1>
             <p class="project-role"> Solo Programmer</p>
             <a href="https://ucsc-wildfire-games.itch.io/firewise-citizens" target="_blank" class="play-button">Play
-                Now</a>
+                On Itch</a>
         </div>
         <!-- Media and Info Container for Flex Layout -->
         <div class="media-info-container">
