--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main class="container">
         <section class="centered-content">
             <h1>Yiyang Lu</h1>
-            <h3>Gameplay Programmer / UI Programmer / Game Designer</h3>
+            <h3>Gameplay Programmer / UI Programmer</h3>
             <a href="about.html" class="btn">Learn more about me</a>
         </section>
 
@@ -54,7 +54,7 @@
                     </div>
 
                     <div class="project-details">
-                        <h3 class="project-title">Gull-Tastrophe (2024)</h3>
+                        <h3 class="project-title">Gull-Tastrophe (2025)</h3>
                         <p class="project-role">Gameplay Programmer</p>
                         <p class="project-description">
                             This project is a 3D Light Action-Adventure Seagull Game. I developed part of the gameplay and system.
@@ -62,7 +62,7 @@
                     </div>
                 </a>
                 
-                <!-- <a href="FiresafeFriend.html" target="_blank" class="projects-col">
+                <a href="FiresafeFriend.html" target="_blank" class="projects-col">
                     <img src="images/ATCCover.gif" alt="Alert The City">
                     <div class="tags">
                         <p class="tag1">C#</p>
@@ -71,15 +71,15 @@
                     </div>
 
                     <div class="project-details">
-                        <h3 class="project-title">Firesafe Friend (2024)</h3>
+                        <h3 class="project-title">Firesafe Friend (2025)</h3>
                         <p class="project-role">Solo Programmer</p>
                         <p class="project-description">
                             This project is a 3D two player strategy game. I programmed the whole game.
                         </p>
                     </div>
-                </a> -->
+                </a>
                 
-                <a href="AlertTheCity.html" target="_blank" class="projects-col">
+                <a href="FirewiseCitizen.html" target="_blank" class="projects-col">
                     <img src="images/ATCCover.gif" alt="Alert The City">
                     <div class="tags">
                         <p class="tag1">C#</p>
@@ -88,7 +88,7 @@
                     </div>
 
                     <div class="project-details">
-                        <h3 class="project-title">Alert The City (2024)</h3>
+                        <h3 class="project-title">Firewise Citizen (2025)</h3>
                         <p class="project-role">Solo Programmer</p>
                         <p class="project-description">
                             This project is a 3D wildfire simulation. I programmed the whole game.
