--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 
     <section class="about">
         <h1>About Me</h1>
-        <p>Hi everyone, I'm <strong>Yiyang Lu</strong>! I just achieved my bachelor's degree in Computer Science: Game Design this June,
+        <p>Hi everyone, I'm <strong>Yiyang Lu</strong>! I achieved my bachelor's degree in Computer Science: Game Design at UCSC,
             and I am continuing to pursue my Master's degree in Game and Playable Media at UCSC Silicon Valley Extension
             right now. I have worked on several school projects as a game programmer on different game engines and enjoy
             collaborating with people. I look forward to working in a professional game development environment to
